@@ -48,7 +48,7 @@
   </release>
   <module name="alacarte">
     <version release="gnome-2.16">
-      <component name="alacarte" dir="alacarte" group="proposed">
+      <component name="alacarte" dir="alacarte" group="desktop">
         <podir dir="po"/>
         <potname name="alacarte.pot"/>
         <branch name="HEAD"/>
@@ -1567,7 +1567,7 @@
   </module>
   <module name="gnome-power-manager">
     <version release="gnome-2.16">
-      <component name="gnome-power-manager" dir="gnome-power-manager" group="proposed">
+      <component name="gnome-power-manager" dir="gnome-power-manager" group="desktop">
         <podir dir="po"/>
         <potname name="gnome-power-manager.pot"/>
         <branch name="HEAD"/>
@@ -2831,7 +2831,7 @@
   -->
   <module name="orca">
     <version release="gnome-2.16">
-      <component name="orca" dir="orca" group="proposed">
+      <component name="orca" dir="orca" group="desktop">
         <podir dir="po"/>
         <potname name="orca.pot"/>
         <branch name="HEAD"/>
