@@ -1,3 +1,7 @@
+2006-08-04  Funda Wang  <fundawang@linux.net.cn>
+
+	* translation-status.xml: several proposed modules are accepted.
+
 2006-08-03  Funda Wang  <fundawang@linux.net.cn>
 
 	* translation-status.xml: gnome-app-install, nofier, update-manager,
